--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                               <p>个人站, 随缘更, 话题不定, 吐槽时常, 我的地盘我做主...吧</p>
                          </div>
                          <ul class="social-icon">
-                              <li class="wow fadeInLeft" data-wow-delay="1s"><a href="#" class="fa fa-github"></a></li>
+                              <li class="wow fadeInLeft" data-wow-delay="1s"><a href="https://github.com/kkmint/kkmint.github.io" class="fa fa-github"></a></li>
                          </ul>
                     </div>
                </div>
