--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8">
 
-<title>遥远的理想乡.</title>
+<title>理想乡.</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="description" content="Personal Website Template">
