--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
                <div class="col-md-4 col-sm-6">
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                          <h2>Creed</h2>
-                         <p>任何一个傻瓜都会写能够让机器理解的代码, 只有好的程序员才能写出人类可以理解的代码</p>
-                         <p>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;---Martin Fowler</p>
+                         <blockquote>
+                             <p>任何一个傻瓜都会写能够让机器理解的代码, 只有好的程序员才能写出人类可以理解的代码</p>
+                             <footer>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;---Martin Fowler</footer>
+                         </blockquote>
                     </div>
                </div>
 
@@ -279,7 +281,6 @@
                               </div>
                         </form>
                     </div>
-                    More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
                </div>
 
           </div>
