--- a/index.html
+++ b/index.html
@@ -138,10 +138,8 @@
                <div class="col-md-4 col-sm-6">
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                          <h2>Creed</h2>
-                         <blockquote>
                              <p>任何一个傻瓜都会写能够让机器理解的代码, 只有好的程序员才能写出人类可以理解的代码</p>
-                             <footer>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;---Martin Fowler</footer>
-                         </blockquote>
+                             <p>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;---Martin Fowler</p>
                     </div>
                </div>
 
